--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ torchvision==0.12.0
 tqdm==4.45.0
 numba==0.55.1
 streamlit==0.79.0
-protobuf~=3.19.0
- opencv-python-headless==4.5.3.56
+protobuf==3.19.0
+opencv-python-headless==4.5.5.62
